--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "karma start karma.conf.js",
+    "test": "jest",
+    "debug": "node --inspect node_modules/.bin/jest --runInBand",
     "build": "webpack --mode development",
     "start": "npm run build; webpack-dev-server --open --mode development",
     "watch": "webpack --watch",
@@ -21,23 +22,19 @@
   },
   "homepage": "",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.3",
+    "@babel/plugin-transform-modules-commonjs": "^7.6.0",
+    "@babel/core": "^7.6.0",
+    "babel-loader": "^8.0.6",
     "babel-preset-es2015": "^6.24.1",
     "clean-webpack-plugin": "^0.1.18",
     "css-loader": "^0.28.10",
     "eslint": "^4.18.2",
     "eslint-loader": "^2.0.0",
     "html-webpack-plugin": "^3.0.6",
-    "jasmine": "^3.1.0",
-    "jasmine-core": "^2.99.1",
-    "karma": "^2.0.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-jquery": "^0.2.2",
-    "karma-webpack": "^2.0.13",
+    "install": "^0.13.0",
+    "jest": "^24.9.0",
+    "jest-cli": "^24.9.0",
+    "npm": "^6.11.3",
     "style-loader": "^0.20.2",
     "uglifyjs-webpack-plugin": "^1.2.2",
     "webpack": "^4.0.1",
