--- a/package.json
+++ b/package.json
@@ -1,44 +1,16 @@
 {
-  "name": "triangle-tracker",
+  "name": "triangle-tracker-with-jest",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "jest",
-    "debug": "node --inspect node_modules/.bin/jest --runInBand",
-    "build": "webpack --mode development",
-    "start": "npm run build; webpack-dev-server --open --mode development",
-    "watch": "webpack --watch",
-    "lint": "eslint src/*.js"
-  },
-  "repository": {
-    "type": "git"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "",
-  "bugs": {
-    "url": ""
-  },
-  "homepage": "",
+  "license": "ISC",
   "devDependencies": {
-    "@babel/plugin-transform-modules-commonjs": "^7.6.0",
-    "@babel/core": "^7.6.0",
-    "babel-loader": "^8.0.6",
-    "babel-preset-es2015": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.18",
-    "css-loader": "^0.28.10",
-    "eslint": "^4.18.2",
-    "eslint-loader": "^2.0.0",
-    "html-webpack-plugin": "^3.0.6",
-    "install": "^0.13.0",
-    "jest": "^24.9.0",
-    "jest-cli": "^24.9.0",
-    "npm": "^6.11.3",
-    "style-loader": "^0.20.2",
-    "uglifyjs-webpack-plugin": "^1.2.2",
-    "webpack": "^4.0.1",
-    "webpack-cli": "^2.0.9",
-    "webpack-dev-server": "^3.1.0"
+    "webpack": "4.39.3",
+    "webpack-cli": "^3.3.8"
   }
 }
